cleaned up code

--- a/CSCI201_FinalProj_v2/src/main/webapp/search.html
+++ b/CSCI201_FinalProj_v2/src/main/webapp/search.html
@@ -6,6 +6,8 @@
 	<script src="search.js"></script>
 	<title>Search Results</title>
 </head>
+
+
 <body>
 <div class="content">
   <div id="header">
@@ -37,7 +39,7 @@
   <h2 class="search-results">Search Results</h2>
     <div class="results-grid">
       <div class="results-row">
-       <div class="result-col-1">
+       <div class="result-col">
           <button class="result-item" onclick="handleResultClick(event)">
             <img src="https://cdn.builder.io/api/v1/image/assets/TEMP/1725d1e41f1f4815d835312dd71811fdd1855ab70f529141aa9a6a67433b8489?apiKey=0ec2231b00044b34988ba4a62b9c20c5&" alt="Movie poster" class="result-image" />
             <h2 class="result-title">
@@ -47,7 +49,7 @@
             </h2>
           </button>
         </div>
-        <div class="result-col-2">
+        <div class="result-col">
           <button class="result-item" onclick="handleResultClick(event)">
             <img src="https://cdn.builder.io/api/v1/image/assets/TEMP/1725d1e41f1f4815d835312dd71811fdd1855ab70f529141aa9a6a67433b8489?apiKey=0ec2231b00044b34988ba4a62b9c20c5&" alt="Movie poster" class="result-image" />
             <h2 class="result-title">
@@ -57,7 +59,7 @@
             </h2>
           </button>
         </div>
-        <div class="result-col-3">
+        <div class="result-col">
           <button class="result-item" onclick="handleResultClick(event)">
             <img src="https://cdn.builder.io/api/v1/image/assets/TEMP/1725d1e41f1f4815d835312dd71811fdd1855ab70f529141aa9a6a67433b8489?apiKey=0ec2231b00044b34988ba4a62b9c20c5&" alt="Movie poster" class="result-image" />
             <h2 class="result-title">
