--- a/CSCI201_FinalProj_v2/src/main/webapp/search.html
+++ b/CSCI201_FinalProj_v2/src/main/webapp/search.html
@@ -40,9 +40,9 @@
     <div class="results-grid">
       <div class="results-row">
        <div class="result-col">
-          <button class="result-item" onclick="handleResultClick(event)">
+          <button class="result-item" id="result-item-1" onclick="handleResult(document.getElementById('result-title-1').value)">
             <img src="https://cdn.builder.io/api/v1/image/assets/TEMP/1725d1e41f1f4815d835312dd71811fdd1855ab70f529141aa9a6a67433b8489?apiKey=0ec2231b00044b34988ba4a62b9c20c5&" alt="Movie poster" class="result-image" />
-            <h2 class="result-title">
+            <h2 class="result-title" id="result-title-1">
               Title
               <br />
               Rating Display
@@ -50,9 +50,9 @@
           </button>
         </div>
         <div class="result-col">
-          <button class="result-item" onclick="handleResultClick(event)">
+          <button class="result-item" id="result-item-2" onclick="handleResult=(document.getElementById('result-title-2').value)">
             <img src="https://cdn.builder.io/api/v1/image/assets/TEMP/1725d1e41f1f4815d835312dd71811fdd1855ab70f529141aa9a6a67433b8489?apiKey=0ec2231b00044b34988ba4a62b9c20c5&" alt="Movie poster" class="result-image" />
-            <h2 class="result-title">
+            <h2 class="result-title" id="result-title-2">
               Title
               <br />
               Rating Display
@@ -60,9 +60,9 @@
           </button>
         </div>
         <div class="result-col">
-          <button class="result-item" onclick="handleResultClick(event)">
+          <button class="result-item" id="result-item-3" onclick="handleResult(document.getElementById('result-title-3').value)">
             <img src="https://cdn.builder.io/api/v1/image/assets/TEMP/1725d1e41f1f4815d835312dd71811fdd1855ab70f529141aa9a6a67433b8489?apiKey=0ec2231b00044b34988ba4a62b9c20c5&" alt="Movie poster" class="result-image" />
-            <h2 class="result-title">
+            <h2 class="result-title" id="result-title-3">
               Title
               <br />
               Rating Display
@@ -71,7 +71,7 @@
         </div>
       </div>
     </div>
-    <button class="view-more" onclick="handleViewMoreClick()">View more results...</button>
+   
   </main>
   <div id="footer">
             <p>@FilmQuest distributed by USC CSCI 201</p>
