--- a/CSCI201_FinalProj_v2/src/main/webapp/search.html
+++ b/CSCI201_FinalProj_v2/src/main/webapp/search.html
@@ -31,41 +31,22 @@
             </div>
         </div>
         
-  <form class="search-bar" onsubmit="handleSearchSubmit(event)">
-    <img src="https://cdn.builder.io/api/v1/image/assets/TEMP/ed3e89a5a8dd2b49175b4ffae641132c9c610c5b755a973915cbe269d76d02be?apiKey=0ec2231b00044b34988ba4a62b9c20c5&" alt="Search icon" class="search-bar-icon" />
+  <form class="searchBar" onsubmit="handleSearchSubmit(event)">
+    <img src="https://cdn.builder.io/api/v1/image/assets/TEMP/ed3e89a5a8dd2b49175b4ffae641132c9c610c5b755a973915cbe269d76d02be?apiKey=0ec2231b00044b34988ba4a62b9c20c5&" alt="Search icon" class="searchBarIcon" />
     <input type="text" class="search-input" placeholder="Search Keyword" aria-label="Search Keyword" />
   </form>
-  <main class="results-container">
-  <h2 class="search-results">Search Results</h2>
-    <div class="results-grid">
-      <div class="results-row">
-       <div class="result-col">
-          <button class="result-item" id="result-item-1" onclick="handleResult(document.getElementById('result-title-1').value)">
-            <h2 class="result-title" id="result-title-1">
+  <main class="resultsContainer">
+  <h2 class="searchResults">Search Results</h2>
+    <div class="resultsGrid">
+      <div class="resultsRow">
+       <div class="resultCol" id="titleColTemplate">
+          <button class="resultItem" onclick="handleResult(document.getElementById('result-title-1').value)">
+            <h2 class="resultTitle">
               Title
-              <br />
-              Rating Display
             </h2>
           </button>
         </div>
-        <div class="result-col">
-          <button class="result-item" id="result-item-2" onclick="handleResult=(document.getElementById('result-title-2').value)">
-            <h2 class="result-title" id="result-title-2">
-              Title
-              <br />
-              Rating Display
-            </h2>
-          </button>
-        </div>
-        <div class="result-col">
-          <button class="result-item" id="result-item-3" onclick="handleResult(document.getElementById('result-title-3').value)">
-            <h2 class="result-title" id="result-title-3">
-              Title
-              <br />
-              Rating Display
-            </h2>
-          </button>
-        </div>
+        
       </div>
     </div>
    
