--- a/CSCI201_FinalProj_v2/src/main/webapp/search.html
+++ b/CSCI201_FinalProj_v2/src/main/webapp/search.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<link rel="stylesheet" href="search.css">
-	<script src="search.js"></script>
+	<script src="search.js" defer></script>
 	<title>Search Results</title>
 </head>
 
@@ -33,24 +33,25 @@
         
   <form class="searchBar" onsubmit="handleSearchSubmit(event)">
     <img src="https://cdn.builder.io/api/v1/image/assets/TEMP/ed3e89a5a8dd2b49175b4ffae641132c9c610c5b755a973915cbe269d76d02be?apiKey=0ec2231b00044b34988ba4a62b9c20c5&" alt="Search icon" class="searchBarIcon" />
-    <input type="text" class="search-input" placeholder="Search Keyword" aria-label="Search Keyword" />
+    <input type="text" class="search-input" placeholder="Search Keyword" aria-label="Search Keyword" required/>
   </form>
-  <main class="resultsContainer">
+  <div id="spacer"></div>
+  <div id="resultsContainer">
   <h2 class="searchResults">Search Results</h2>
     <div class="resultsGrid">
       <div class="resultsRow">
        <div class="resultCol" id="titleColTemplate">
-          <button class="resultItem" onclick="handleResult(document.getElementById('result-title-1').value)">
-            <h2 class="resultTitle">
+          <button class="resultItem" >
+            <div class="resultTitle">
               Title
-            </h2>
+            </div>
           </button>
         </div>
         
       </div>
     </div>
    
-  </main>
+  </div>
   <div id="footer">
             <p>@FilmQuest distributed by USC CSCI 201</p>
       </div>
