--- a/CSCI201_FinalProj_v2/src/main/webapp/search.html
+++ b/CSCI201_FinalProj_v2/src/main/webapp/search.html
@@ -31,29 +31,27 @@
             </div>
         </div>
         
-  <form class="searchBar" onsubmit="handleSearchSubmit(event)">
-    <img src="https://cdn.builder.io/api/v1/image/assets/TEMP/ed3e89a5a8dd2b49175b4ffae641132c9c610c5b755a973915cbe269d76d02be?apiKey=0ec2231b00044b34988ba4a62b9c20c5&" alt="Search icon" class="searchBarIcon" />
-    <input type="text" class="search-input" placeholder="Search Keyword" aria-label="Search Keyword" />
+ <form id="myForm" name="myForm" class="searchBar">
+    <input type="image" src="https://cdn.builder.io/api/v1/image/assets/TEMP/ed3e89a5a8dd2b49175b4ffae641132c9c610c5b755a973915cbe269d76d02be?apiKey=0ec2231b00044b34988ba4a62b9c20c5&" alt="Search icon" class="searchBarIcon" />
+    <input type="text" id="title" class="search-input" name="title" placeholder="Search Movie"/>
+    <input id="submit-btn" type="button" value="Search" onclick="loadData()">
+    <!-- onclick="handleResult(document.getElementById('result-title-1').value)" -->
   </form>
-  <main class="resultsContainer">
-  <h2 class="searchResults">Search Results</h2>
-    <div class="resultsGrid">
-      <div class="resultsRow">
-       <div class="resultCol" id="titleColTemplate">
-          <button class="resultItem" onclick="handleResult(document.getElementById('result-title-1').value)">
-            <h2 class="resultTitle">
-              Title
-            </h2>
-          </button>
-        </div>
-        
-      </div>
-    </div>
-   
-  </main>
+  <!-- <form id="myForm" name="myform">
+  <label for="name">Name:</label>
+    <input type="text" id="name" name="name" required><br><br>
+    <button type="submit">Submit</button>
+    <input id="submit-btn" type="button" value="Search" onclick="loadData();">
+</form> -->
+<div class="resultsContainer">
+	<h2 class="searchResults">Search Results</h2>
+	<div id="response"></div>
+</div>
+
   <div id="footer">
             <p>@FilmQuest distributed by USC CSCI 201</p>
       </div>
 </div>
+<script src="search.js"></script>
 </body>
 </html>
