--- a/CSCI201_FinalProj_v2/src/main/webapp/signup.html
+++ b/CSCI201_FinalProj_v2/src/main/webapp/signup.html
@@ -65,6 +65,6 @@
                 <input type="submit" id="Submit" value="Create Account" />
             </form>
         </main>
-        <script src="login.js"></script>
+        <script src="signup.js"></script>
     </body>
 </html>
