forgot this file

--- a/CSCI201_FinalProj_v2/src/main/webapp/search.html
+++ b/CSCI201_FinalProj_v2/src/main/webapp/search.html
@@ -28,6 +28,10 @@
                     <img src="images/rating.png" alt="Ratings-Reviews-Logo">
                     <a href="myreviews.html">My Reviews</a>
                 </div>
+                <div class="menu-item">
+                	<img src="images/quest_logo.png" alt="Ratings-Reviews-Logo">
+                    <a href="login.html"> Login/SignUp </a>
+                </div>
             </div>
         </div>
         
