--- a/CSCI201_FinalProj_v2/src/main/webapp/search.html
+++ b/CSCI201_FinalProj_v2/src/main/webapp/search.html
@@ -31,11 +31,37 @@
             </div>
         </div>
         
-
+  <form class="searchBar" onsubmit="handleSearchSubmit(event)">
+    <img src="https://cdn.builder.io/api/v1/image/assets/TEMP/ed3e89a5a8dd2b49175b4ffae641132c9c610c5b755a973915cbe269d76d02be?apiKey=0ec2231b00044b34988ba4a62b9c20c5&" alt="Search icon" class="searchBarIcon" />
+    <input type="text" class="search-input" placeholder="Search Keyword" aria-label="Search Keyword" required/>
+  </form>
+  <div id="spacer"></div>
+  <div id="resultsContainer">
+  <h2 class="searchResults">Search Results</h2>
+    <div class="resultsGrid">
+      <div class="resultsRow">
+       <div class="resultCol" id="titleColTemplate">
+          <button class="resultItem" >
+            <div class="resultTitle">
+              Title
+            </div>
+          </button>
+        </div>
+        
+      </div>
+    </div>
+   
+  </div>\
+  <div id="additionalInfo">
+            <!-- Add your additional information here -->
+            <h2>Title of the Movie</h2>
+		    <p>Description of the movie goes here...</p>
+		    <p>Rating</p>
+		    <p>Genre</p>
+        </div>
   <div id="footer">
             <p>@FilmQuest distributed by USC CSCI 201</p>
       </div>
 </div>
-<script src="search.js"></script>
 </body>
 </html>
