required signup.html

--- a/CSCI201_FinalProj_v2/src/main/webapp/signup.html
+++ b/CSCI201_FinalProj_v2/src/main/webapp/signup.html
@@ -37,22 +37,22 @@
                         <p>Re-Enter Password</p>
                     </div>
                     <div id="Input">
-                        <input type="text" name ="Name" class="field" />
+                        <input type="text" name ="Name" class="field" required/>
                         <br />
 
-                        <input type="email" name ="Email" class="field" />
+                        <input type="email" name ="Email" class="field" required/>
                         <br />
 
-                        <input type="text" name ="Username" class="field" />
+                        <input type="text" name ="Username" class="field" required/>
                         <br />
 
-                        <input type="password" name ="Password" class="field" />
+                        <input type="password" name ="Password" class="field" required/>
                         <br />
 
                         <input
                             type="password"
                             id="ConfirmPassword"
-                            class="field" />
+                            class="field" required/>
                     </div>
                 </div>
                 <input type="submit" id="Submit" value="Create Account" />
