--- a/CSCI201_FinalProj_v2/src/main/webapp/login.html
+++ b/CSCI201_FinalProj_v2/src/main/webapp/login.html
@@ -1,4 +1,4 @@
-<!doctype html>
+ir<!doctype html>
 <html>
     <head>
         <meta charset="ISO-8859-1" />
@@ -28,11 +28,11 @@
                 <h1 id="Welcome">Welcome Back</h1>
                 <img id="Account" src="images/Account.png" />
                 <br />
-                <input type="text" id="Username" name = "Username" placeholder="username" />
+                <input type="text" id="Username" name = "Username" placeholder="username" required/>
                 <br />
-                <input type="password" id="Password" name = "Password" placeholder="password" />
+                <input type="password" id="Password" name = "Password" placeholder="password" required/>
                 <br />
-                <input type="submit" id="Submit" value="LOGIN" />
+                <input type="submit" id="Submit" value="LOGIN"/>
                 <br />
                 <input type="button" id="Submit2" value="... Or Sign Up" onClick = "window.location.href = 'signup.html;'"/>
                 
