fine-tuned some stuff and also made a servlet for reviews on the profile page

--- a/CSCI201_FinalProj_v2/src/main/webapp/search.html
+++ b/CSCI201_FinalProj_v2/src/main/webapp/search.html
@@ -17,19 +17,15 @@
             </div>
             <div id="menu-items">
                 <div class="menu-item">
-                    <img src="images/profile_menu_holder.png" alt="My-Profile-Logo">
+                    <img src="images/profile_menu_holder.png" alt="My-Profile-Logo" style = "cursor: pointer;" onclick = "moveToPortfolio();">
                     <input type = "button" class = "ButtonProfile" value = "My Profile" onclick = "moveToPortfolio();">
                 </div>
                 <div class="menu-item">
-                    <img src="images/search.png" alt="Search-Logo">
+                    <img src="images/search.png" alt="Search-Logo" style = "cursor: pointer;" onclick = "window.location.href = 'search.html';">
                     <a href="search.html">Search For Movies</a>
                 </div>
                 <div class="menu-item">
-                    <img src="images/rating.png" alt="Ratings-Reviews-Logo">
-                    <a href="myreviews.html">My Reviews</a>
-                </div>
-                <div class="menu-item">
-                	<img src="images/quest_logo.png" alt="Ratings-Reviews-Logo">
+                	<img src="images/quest_logo.png" alt="Ratings-Reviews-Logo" style = "cursor: pointer;" onclick = "window.location.href = 'login.html';">
                     <a href="login.html"> Login/SignUp </a>
                 </div>
             </div>
