--- a/CSCI201_FinalProj_v2/src/main/webapp/login.html
+++ b/CSCI201_FinalProj_v2/src/main/webapp/login.html
@@ -1,4 +1,4 @@
-ir<!doctype html>
+<!doctype html>
 <html>
     <head>
         <meta charset="ISO-8859-1" />
@@ -15,16 +15,12 @@ ir<!doctype html>
             </div>
 
             <div id="Buttons">
-                <img src="images/AccountIcon.png" />
-                <button id="LoginButton" onclick="GoHome()">
-                    Login / Create Account
-                </button>
-                <img src="images/SearchIcon.png" />
-                <button id="SearchButton" onClick = "window.location.href = 'search.html;'">Search for Movies</button>
+                <img src="images/SearchIcon.png" style = "cursor: pointer;" onClick = "window.location.href = 'search.html;'" />
+                <button id="SearchButton" style = "cursor: pointer;" onClick = "window.location.href = 'search.html;'">Search for Movies</button>
             </div>
         </header>
         <main id="Boxes">
-            <form id="Login" name = "Login" onSubmit = "event.preventDefault(); UserSignIn();">
+            <form id="Login" name = "Login" style = "border-radius: 5px;" onSubmit = "event.preventDefault(); UserSignIn();">
                 <h1 id="Welcome">Welcome Back</h1>
                 <img id="Account" src="images/Account.png" />
                 <br />
@@ -32,9 +28,9 @@ ir<!doctype html>
                 <br />
                 <input type="password" id="Password" name = "Password" placeholder="password" required/>
                 <br />
-                <input type="submit" id="Submit" value="LOGIN"/>
+                <input type="submit" style = "cursor: pointer; border-radius: 5px;" id="Submit" value="LOGIN"/>
                 <br />
-                <input type="button" id="Submit2" value="... Or Sign Up" onClick = "window.location.href = 'signup.html;'"/>
+                <input type="button" style = "cursor: pointer; border-radius: 5px;" id="Submit2" value="... Or Sign Up" onClick = "window.location.href = 'signup.html;'"/>
                 
             </form>
         </main>
